fixed scroll bar shift on navigating b/w home and comming soon routes.

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,5 +5,8 @@
 html,
 body {
   min-height: 99dvh;
-  /* background: red; */
+}
+
+body {
+  overflow-y: scroll;
 }
